# dental-pano-ai

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
